--- a/WebVisualizations/style.css
+++ b/WebVisualizations/style.css
@@ -20,12 +20,12 @@ body {
   /* Making our navbar li's inline-block elements this makes it so we can have multiple on the same line. Floats could have been used too */
   .navbar li {
     display: inline-block;
-    padding: 20px;
-    margin-right: 10px;
-    margin-left: 10px;
+    padding: 10px;
+    margin-right: 5px;
+    margin-left: 5px;
     cursor: pointer;
-    background: #fff;
-    border-radius: 3px;
+    background: lightblue;
+    border-radius: 1px;
   }
   
   /* Getting rid of the default link styles here */
@@ -36,7 +36,7 @@ body {
   
   /* Styling the header, giving it a height, a background color, and some top padding */
   .header {
-    height: 200px;
+    height: 100px;
     padding-top: 20px;
     background: #cdcdcd;
   }
@@ -62,24 +62,27 @@ body {
       text-decoration: none;
       padding: 11px
     }
+
+    .medium_photos {
+      min-width: 250px;
+    }
   }
 
   #landing_photo {
-   float: left
-   width: 200px;
-   height: 200px;
-   margin_top: 20px;
-   margin_right: 20px;
+   float: left;
+   width: 400px;
+   height: auto;
   }
 
   .small_photos {
-    width: 150px; 
-    height: 150px;
+    float: left;
+    width: 170px; 
+    height: auto;
   }
 
   .medium_photo {
-    width: 600px; 
-    height: 400px;
+    width: 500px; 
+    height: auto;
   }
 
   .container {
